--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
                     Universidade Federal de Goiás (UFG), atualmente desenvolvendo
                     um projeto na área de tratamentos não farmacológico para a doença de Alzheimer. Participou
                     da XII edição da Feira de Física promovida pela UFG no ano a 2019.
-                    Atualmente voltado a estudos de desenhos e pinturas juntamente com artesanato por robbie </p>
+                    Seus principais interesses envolvem o estudo de desenhos, pinturas, artesanato
+                     e apreciação de musica classica.</p>
             </div>
             <div class="c c2">
                 <img class="imglocais" src="imagens/eu-1.jpg" alt="autor do projet" />
